--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 9000:9000
       - 8080-8089:8080-8089
-    container_name: tokyo-rl
+    container_name: tokyo-rl-sol
     volumes:
       - ./:/home/tokyo-rl/local
     command: "jupyter lab \
